# fund-vote

./: package-lock.json
contract/: Cargo.toml
contract/.stellar/identity/: test-account.toml  test-account2.toml  test-account3.toml  test-account4.toml
contract/src/: lib.rs
frontend/: README.md  next.config.js  package-lock.json  package.json  postcss.config.mjs  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: VotingInterface.tsx  WalletConnection.tsx
